--- a/src/app/demo/components/pages/empty/emptydemo.component.html
+++ b/src/app/demo/components/pages/empty/emptydemo.component.html
@@ -4,5 +4,9 @@
             <h4>Empty Page</h4>
             <p>This is your empty page template to start building beautiful applications.</p>
         </div>
+        <div class="flex flex-column align-items-center justify-content-center h-full py-5 px-3">
+            <i class="pi pi-fw pi-ticket mr-2 text-2xl"></i>
+            <p class="m-0 mt-5 text-center text-lg">Seat Component Content via Child Route</p>
+        </div>
     </div>
 </div>
