--- a/src/app/demo/components/uikit/input/inputdemo.component.html
+++ b/src/app/demo/components/uikit/input/inputdemo.component.html
@@ -142,7 +142,7 @@
 			<h5>Dropdown</h5>
 			<p-dropdown [options]="cities" [(ngModel)]="selectedDrop" placeholder="Select a City" [showClear]="true"></p-dropdown>
 
-			<h5>Multiselect</h5>
+			<h5>Multiselec</h5>
 			<p-multiSelect [options]="countries" [(ngModel)]="selectedMulti" placeholder="Select a Country" optionLabel="name" class="multiselect-custom" display="chip">
 				<ng-template let-country pTemplate="item">
 					<div class="flex align-items-center">
@@ -164,7 +164,7 @@
 			<p-selectButton [options]="paymentOptions" [(ngModel)]="valSelect2" [multiple]="true" optionLabel="name"></p-selectButton>
 		</div>
 	</div>
-	
+
 	<div class="col-12">
 		<div class="card">
 			<h5>InputGroup</h5>
