--- a/src/app/layout/app.topbar.component.html
+++ b/src/app/layout/app.topbar.component.html
@@ -92,8 +92,8 @@
 
 
         <button class="p-link layout-topbar-button">
-            <i class="pi pi-calendar"></i>
-            <span>Calendar</span>
+            <i class="pi pi-bell"></i>
+            <span>Notification</span>
         </button>
         <button class="p-link layout-topbar-button">
             <i class="pi pi-user"></i>
