--- a/src/app/demo/components/workspace/clients/clients-list-v2/clients-list-v2.component.html
+++ b/src/app/demo/components/workspace/clients/clients-list-v2/clients-list-v2.component.html
@@ -106,7 +106,12 @@
                 </ng-template>
                 <ng-template pTemplate="emptymessage">
                     <tr>
-                        <td colspan="8">No customers found.</td>
+                        <td colspan="8">No clients found.</td>
+                    </tr>
+                </ng-template>
+                <ng-template pTemplate="loadingbody">
+                    <tr>
+                        <td colspan="8">Loading clients data. Please wait.</td>
                     </tr>
                 </ng-template>
             </p-table>
